operators/openshift-ai-maas/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhoai-deploy
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    opendatahub.io/dashboard: "true"
